RESOLVED FIXED166471
[iOS] DumpRenderTree triggers an assertion failure when calling +[WebPreferences _switchNetworkLoaderToNewTestingSession]
https://bugs.webkit.org/show_bug.cgi?id=166471
Summary [iOS] DumpRenderTree triggers an assertion failure when calling +[WebPreferen...
Andy Estes
Reported 2016-12-23 18:02:24 PST
[iOS] DumpRenderTree triggers an assertion failure when calling +[WebPreferences _switchNetworkLoaderToNewTestingSession]
Attachments
Patch (1.83 KB, patch)
2016-12-23 18:07 PST, Andy Estes
no flags
Andy Estes
Comment 1 2016-12-23 18:07:21 PST
Andreas Kling
Comment 2 2016-12-23 18:09:28 PST
Comment on attachment 297727 [details] Patch r=me
WebKit Commit Bot
Comment 3 2016-12-23 20:40:37 PST
Comment on attachment 297727 [details] Patch Clearing flags on attachment: 297727 Committed r210144: <http://trac.webkit.org/changeset/210144>
WebKit Commit Bot
Comment 4 2016-12-23 20:40:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.